# capsuleer.app

./: .eslintrc.js  .gitignore  README.md  black  esi.conf.example  nginx.conf.example  package-lock.json  package.json  pip-freeze.txt  pyproject.toml  recreate_venv.sh  requirements.txt  schema.sql  supervisord.conf  tsconfig.json  webpack.common.js  webpack.config.js  webpack.prod.js
cache/: stunnel_config  varnish.vcl
capsuleerapp/: __main__.py  db.py  esi.py  isk_for_sp.py  jwt.py  types.py
capsuleerapp/offline/: all_forge_npc.py  dump_skills.py  implant_search.py  render_skillimgs.html
capsuleerapp/tests/: test_esilimiter.py
esi/: __main__.py  data.py  db.py  esi.py  isk_for_sp.py  types.py
esi/tests/: __main__.py  test_esilimiter.py
offline/: all_forge_npc.py  dump_skills.py  implant_search.py
src/: character_skills.ts  index.html  index.tsx  optimizer.tsx  optimizer2.test.ts  optimizer2.ts  server.ts  static_skill_data.tsx
src/components/: char_summary.tsx  character_expired.tsx  headshot.tsx  isk_for_sp.tsx  login_form.tsx  md.tsx  optimizer.tsx  radar.tsx  settings.tsx  skill.tsx  skill_browser.tsx  skill_costs_for_character.tsx  skill_queue.tsx  skill_requirement_tree.tsx  wallet.tsx
src/components/header/: character_hover.tsx  character_select.tsx  header.tsx  skill_progress.tsx
src/misc/: formatting.ts  sp.ts  urls.ts  visibilitytimeout.ts
src/static/: callback.html  s.css
