[project]
name = "capsuleerapp"
version = "1"
dependencies = ["aiohttp-session>2.11,<3"]

[tool.isort]
profile = "black"
py_version = 311
length_sort = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "UP"]

[tool.pixi.project]
name = "capsuleerapp"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
capsuleerapp = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.13.*"
aiohttp = ">=3.10.8"
asyncpg = ">=0.29.0,<0.30"
cryptography = ">=43.0.1,<44"
sentry-sdk = ">=2.14.0,<3"
nodejs = "20.17.0.*"
ruff = ">=0.6.8,<0.7"
pre-commit = ">=3.8.0,<4"
pytest = ">=8.3.3,<9"
